--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Duende.AspNetIdentity-6.0.0;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(local);Database=IdentityServer6-EasySSO;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
+    }
 }
